--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "history": "^5.0.0",
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.15",
+    "moment": "^2.29.1",
     "node-sass": "^4.13.0",
     "rc-queue-anim": "^1.8.4",
     "rc-tween-one": "^2.6.8",
@@ -39,6 +40,7 @@
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-frame-component": "^4.1.1",
+    "react-geolocated": "^3.1.0",
     "react-highlight-words": "^0.16.0",
     "react-infinite-scroller": "^1.2.4",
     "react-intl": "^5.4.5",
